# TheBoyz

./: app.py  baldo_chat.txt  netlify.toml  pyproject.toml  unde_chat.txt
netlify/functions/: handler.py
static/: script.js  style.css  styles.css
templates/: index.html
